--- a/CrossHMI/CrossHMI.Shared/CrossHMI.Shared.csproj
+++ b/CrossHMI/CrossHMI.Shared/CrossHMI.Shared.csproj
@@ -4,4 +4,16 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AoLibs.Adapters.Core" Version="0.1.1" />
+    <PackageReference Include="AoLibs.Navigation.Core" Version="0.1.1" />
+    <PackageReference Include="AoLibs.Utilities.Shared" Version="0.1.1" />
+    <PackageReference Include="Autofac" Version="4.8.1" />
+    <PackageReference Include="MvvmLightLibsStd10" Version="5.4.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CrossHMI.Models\CrossHMI.Models.csproj" />
+  </ItemGroup>
+
 </Project>
