--- a/CrossHMI/CrossHMI.Shared/CrossHMI.Shared.csproj
+++ b/CrossHMI/CrossHMI.Shared/CrossHMI.Shared.csproj
@@ -9,10 +9,15 @@
     <PackageReference Include="AoLibs.Navigation.Core" Version="0.1.1" />
     <PackageReference Include="AoLibs.Utilities.Shared" Version="0.1.1" />
     <PackageReference Include="Autofac" Version="4.8.1" />
+    <PackageReference Include="Microsoft.Diagnostics.EventFlow.Inputs.EventSource" Version="1.4.1" />
+    <PackageReference Include="Microsoft.Diagnostics.EventFlow.Inputs.Trace" Version="1.4.1" />
+    <PackageReference Include="Microsoft.Diagnostics.EventFlow.Outputs.StdOutput" Version="1.4.0" />
     <PackageReference Include="MvvmLightLibsStd10" Version="5.4.1" />
+    <PackageReference Include="System.ComponentModel.Composition" Version="4.5.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CrossHMI.Interfaces\CrossHMI.Interfaces.csproj" />
     <ProjectReference Include="..\CrossHMI.Models\CrossHMI.Models.csproj" />
   </ItemGroup>
 
