Basic data display

--- a/CrossHMI/CrossHMI.Android/CrossHMI.Android.csproj
+++ b/CrossHMI/CrossHMI.Android/CrossHMI.Android.csproj
@@ -139,6 +139,11 @@
   <ItemGroup>
     <AndroidAsset Include="Assets\LibraryConfiguration.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\dashboard_received_data_item.xml">
+      <Generator>MSBuild:UpdateGeneratedFiles</Generator>
+    </AndroidResource>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
 		Other similar extension points exist, see Microsoft.Common.targets.
