--- a/CrossHMI/CrossHMI.Shared/CrossHMI.Shared.csproj
+++ b/CrossHMI/CrossHMI.Shared/CrossHMI.Shared.csproj
@@ -4,6 +4,14 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <LangVersion>7.1</LangVersion>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <LangVersion>7.1</LangVersion>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="AoLibs.Adapters.Core" Version="0.1.1" />
     <PackageReference Include="AoLibs.Navigation.Core" Version="0.1.1" />
