Implemented GPS adapter + a bit of cleanup

--- a/CrossHMI/CrossHMI.Android/CrossHMI.Android.csproj
+++ b/CrossHMI/CrossHMI.Android/CrossHMI.Android.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Adapters\ConfigurationResourcesProvider.cs" />
+    <Compile Include="Adapters\GpsAdapter.cs" />
     <Compile Include="App.cs" />
     <Compile Include="Fragment\DashboardPageFragment.cs" />
     <Compile Include="Activities\MainActivity.cs" />
