--- a/.gitignore
+++ b/.gitignore
@@ -228,3 +228,4 @@ MALClient.Desktop/BundleArtifacts/
 MALClient.Dekstop/BundleArtifacts/
 MALClient.Android/Resources/Resource.Designer.cs
 MALClient.XShared/Secrets.cs
+/CrossHMI/CrossHMI.Tools.ModelBuilder
