--- a/CrossHMI/CrossHMI.Models/CrossHMI.Models.csproj
+++ b/CrossHMI/CrossHMI.Models/CrossHMI.Models.csproj
@@ -12,4 +12,8 @@
     <LangVersion>7.1</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="UAOOI.Configuration.Networking" Version="4.0.0" />
+  </ItemGroup>
+
 </Project>
