Displaying more info on boiler's page

--- a/.gitignore
+++ b/.gitignore
@@ -231,3 +231,4 @@ MALClient.XShared/Secrets.cs
 /CrossHMI/CrossHMI.Tools.ModelBuilder
 
 site/
+CrossHMI/CrossHMI.Android/Resources/values/secrets.xml
