--- a/CrossHMI/CrossHMI.Android/Properties/AndroidManifest.xml
+++ b/CrossHMI/CrossHMI.Android/Properties/AndroidManifest.xml
@@ -1,9 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="CrossHMI.Android.CrossHMI.Android" android:installLocation="auto">
-	<uses-sdk android:minSdkVersion="22" android:targetSdkVersion="28" />
-	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-	<application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="@string/app_name" android:roundIcon="@mipmap/ic_launcher_round" android:supportsRtl="true" android:theme="@style/AppTheme">
-		<meta-data android:name="com.google.android.geo.API_KEY" android:value="@string/GoogleMapsApiKey" />
-	</application>
+
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0"
+          package="CrossHMI.Android.CrossHMI.Android" android:installLocation="auto">
+  <uses-sdk android:minSdkVersion="22" android:targetSdkVersion="28" />
+  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+  <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+  <application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="@string/app_name"
+               android:roundIcon="@mipmap/ic_launcher_round" android:supportsRtl="true" android:theme="@style/AppTheme">
+    <meta-data android:name="com.google.android.geo.API_KEY" android:value="@string/GoogleMapsApiKey" />
+  </application>
 </manifest>
