Code restructuring and cleanup #12 #11 #13 #7

--- a/CrossHMI/CrossHMI.Android/CrossHMI.Android.csproj
+++ b/CrossHMI/CrossHMI.Android/CrossHMI.Android.csproj
@@ -167,7 +167,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\LibraryConfiguration.xml">
+    <AndroidAsset Include="Assets\LibraryConfiguration.json">
       <SubType>Designer</SubType>
     </AndroidAsset>
   </ItemGroup>
