Detaching library integration to separate project

--- a/CrossHMI/CrossHMI.Interfaces/CrossHMI.Interfaces.csproj
+++ b/CrossHMI/CrossHMI.Interfaces/CrossHMI.Interfaces.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\CrossHMI.Models\CrossHMI.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Networking\" />
+  </ItemGroup>
+
 </Project>
