--- a/CrossHMI/CrossHMI.Android/CrossHMI.Android.csproj
+++ b/CrossHMI/CrossHMI.Android/CrossHMI.Android.csproj
@@ -64,9 +64,9 @@
     <Reference Include="Mono.Android" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Adapters\AndroidLoggerProvider.cs" />
     <Compile Include="Adapters\ConfigurationResourcesProvider.cs" />
     <Compile Include="Adapters\GpsAdapter.cs" />
-    <Compile Include="Adapters\LogAdapter.cs" />
     <Compile Include="App.cs" />
     <Compile Include="Fragment\BoilerDetailsPageFragment.cs" />
     <Compile Include="Fragment\DashboardPageFragment.cs" />
@@ -131,6 +131,9 @@
     <PackageReference Include="Autofac">
       <Version>4.9.4</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions">
+      <Version>3.1.0</Version>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.2</Version>
     </PackageReference>
@@ -156,6 +159,10 @@
     <ProjectReference Include="..\CrossHMI.Interfaces\CrossHMI.Interfaces.csproj">
       <Project>{62291379-e90b-4386-a061-47cb9f94c40b}</Project>
       <Name>CrossHMI.Interfaces</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CrossHMI.LibraryIntegration\CrossHMI.LibraryIntegration.csproj">
+      <Project>{dcc95a78-a698-43b6-88b9-1a67b1ae6005}</Project>
+      <Name>CrossHMI.LibraryIntegration</Name>
     </ProjectReference>
     <ProjectReference Include="..\CrossHMI.Models\CrossHMI.Models.csproj">
       <Project>{262d5493-306e-4b37-a365-6bc7f4c5f2f2}</Project>
