--- a/CrossHMI/CrossHMI.Shared/CrossHMI.Shared.csproj
+++ b/CrossHMI/CrossHMI.Shared/CrossHMI.Shared.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="AoLibs.Navigation.Core" Version="0.6.9" />
     <PackageReference Include="AoLibs.Utilities.Shared" Version="0.6.9" />
     <PackageReference Include="Autofac" Version="4.9.4" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.0" />
     <PackageReference Include="MvvmLightLibsStd10" Version="5.4.1.1" />
     <PackageReference Include="UAOOI.Networking.Encoding" Version="4.0.1" />
     <PackageReference Include="UAOOI.Networking.SemanticData" Version="4.0.1" />
@@ -25,7 +26,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CrossHMI.Interfaces\CrossHMI.Interfaces.csproj" />
+    <ProjectReference Include="..\CrossHMI.LibraryIntegration\CrossHMI.LibraryIntegration.csproj" />
     <ProjectReference Include="..\CrossHMI.Models\CrossHMI.Models.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
   </ItemGroup>
 
 </Project>
