Extract azure integration to separate project

--- a/CrossHMI/CrossHMI.AzureGatewayService/appsettings.json
+++ b/CrossHMI/CrossHMI.AzureGatewayService/appsettings.json
@@ -1,9 +1,18 @@
 {
   "Logging": {
+    "IncludeScopes": true,
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Debug",
+      "System": "Warning",
+      "Microsoft": "Information"
+    },
+    "Console": {
+      "IncludeScopes": true,
+      "LogLevel": {
+        "Default": "Debug",
+        "System": "Information",
+        "Microsoft": "Information"
+      }
     }
   }
 }
