--- a/CrossHMI/CrossHMI.LibraryIntegration.AzureGateway/CrossHMI.LibraryIntegration.AzureGateway.csproj
+++ b/CrossHMI/CrossHMI.LibraryIntegration.AzureGateway/CrossHMI.LibraryIntegration.AzureGateway.csproj
@@ -1,35 +1,27 @@
-<Project Sdk="Microsoft.NET.Sdk.Worker">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <UserSecretsId>dotnet-CrossHMI.AzureGatewayService-0F9D0BE9-3CFA-43E3-92FF-713BDDE82C06</UserSecretsId>
-    <LangVersion>8.0</LangVersion>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Remove="Configuration\LibraryConfiguration.json" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="Configuration\LibraryConfiguration.json" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.0" />
     <PackageReference Include="DotNetty.Codecs.Mqtt" Version="0.6.0" />
     <PackageReference Include="EnterpriseLibrary.TransientFaultHandling" Version="6.0.1304" />
     <PackageReference Include="Microsoft.Azure.Amqp" Version="2.4.3" />
     <PackageReference Include="Microsoft.Azure.Devices.Client" Version="1.22.0" />
     <PackageReference Include="Microsoft.Azure.Devices.Provisioning.Client" Version="1.4.1" />
     <PackageReference Include="Microsoft.Azure.Devices.Provisioning.Transport.Amqp" Version="1.1.10" />
-    <PackageReference Include="MvvmLightLibsStd10" Version="5.4.1.1" />
+    <PackageReference Include="Microsoft.Azure.Devices.Provisioning.Transport.Mqtt" Version="1.1.9" />
+    <PackageReference Include="Microsoft.Azure.Devices.Provisioning.Transport.Http" Version="1.1.7" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.0" />
+    <PackageReference Include="Optional" Version="4.0.0" />
     <PackageReference Include="System.ObjectModel" Version="4.3.0" />
     <PackageReference Include="System.Private.ServiceModel" Version="4.7.0" />
     <PackageReference Include="System.ServiceModel.Primitives" Version="4.7.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CrossHMI.LibraryIntegration.AzureGateway\CrossHMI.LibraryIntegration.AzureGateway.csproj" />
     <ProjectReference Include="..\CrossHMI.LibraryIntegration\CrossHMI.LibraryIntegration.csproj" />
   </ItemGroup>
+
 </Project>
