--- a/CrossHMI/CrossHMI.LibraryIntegration.AzureGateway/CrossHMI.LibraryIntegration.AzureGateway.csproj
+++ b/CrossHMI/CrossHMI.LibraryIntegration.AzureGateway/CrossHMI.LibraryIntegration.AzureGateway.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.Azure.Devices.Provisioning.Transport.Http" Version="1.1.7" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.0" />
     <PackageReference Include="Optional" Version="4.0.0" />
+    <PackageReference Include="Optional.Async" Version="1.3.0" />
     <PackageReference Include="System.ObjectModel" Version="4.3.0" />
     <PackageReference Include="System.Private.ServiceModel" Version="4.7.0" />
     <PackageReference Include="System.ServiceModel.Primitives" Version="4.7.0" />
