Include library logging

--- a/CrossHMI/CrossHMI.AzureGatewayService/appsettings.json
+++ b/CrossHMI/CrossHMI.AzureGatewayService/appsettings.json
@@ -2,14 +2,14 @@
   "Logging": {
     "IncludeScopes": true,
     "LogLevel": {
-      "Default": "Debug",
+      "Default": "Trace",
       "System": "Warning",
       "Microsoft": "Information"
     },
     "Console": {
       "IncludeScopes": true,
       "LogLevel": {
-        "Default": "Debug",
+        "Default": "Trace",
         "System": "Information",
         "Microsoft": "Information"
       }
