--- a/CrossHMI/CrossHMI.AzureGatewayService/CrossHMI.AzureGatewayService.csproj
+++ b/CrossHMI/CrossHMI.AzureGatewayService/CrossHMI.AzureGatewayService.csproj
@@ -13,18 +13,17 @@
 
   <ItemGroup>
     <None Include="Configuration\LibraryConfigurationExample.json" />
-    <None Include="Configuration\LibraryConfiguration.json" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.6" />
     <PackageReference Include="DotNetty.Codecs.Mqtt" Version="0.6.0" />
-    <PackageReference Include="EnterpriseLibrary.TransientFaultHandling" Version="6.0.1304" />
-    <PackageReference Include="Microsoft.Azure.Amqp" Version="2.4.5" />
-    <PackageReference Include="Microsoft.Azure.Devices.Client" Version="1.27.0" />
-    <PackageReference Include="Microsoft.Azure.Devices.Provisioning.Client" Version="1.6.0" />
-    <PackageReference Include="Microsoft.Azure.Devices.Provisioning.Transport.Amqp" Version="1.3.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.EventSource" Version="3.1.6" />
     <PackageReference Include="MvvmLightLibsStd10" Version="5.4.1.1" />
+    <PackageReference Include="Serilog" Version="2.9.0" />
+    <PackageReference Include="Serilog.Extensions.Hosting" Version="3.1.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="System.ObjectModel" Version="4.3.0" />
     <PackageReference Include="System.Private.ServiceModel" Version="4.7.0" />
     <PackageReference Include="System.ServiceModel.Primitives" Version="4.7.0" />
