--- a/CrossHMI/CrossHMI.AzureGatewayService/Configuration/LibraryConfigurationExample.json
+++ b/CrossHMI/CrossHMI.AzureGatewayService/Configuration/LibraryConfigurationExample.json
@@ -729,28 +729,32 @@
       "AzureDeviceId": "",
       "AzureScopeId": "",
       "AzurePrimaryKey": "",
-      "AzureSecondaryKey": ""
+      "AzureSecondaryKey": "",
+      "PublishingInterval": "00:00:15" 
     },
     {
       "Repository": "BoilersArea_Boiler #2",
       "AzureDeviceId": "",
       "AzureScopeId": "",
       "AzurePrimaryKey": "",
-      "AzureSecondaryKey": ""
+      "AzureSecondaryKey": "",
+      "PublishingInterval": "00:00:15"
     },
     {
       "Repository": "BoilersArea_Boiler #4",
       "AzureDeviceId": "",
       "AzureScopeId": "",
       "AzurePrimaryKey": "",
-      "AzureSecondaryKey": ""
+      "AzureSecondaryKey": "",
+      "PublishingInterval": "00:00:15"
     },
     {
       "Repository": "BoilersArea_Boiler #3",
       "AzureDeviceId": "",
       "AzureScopeId": "",
       "AzurePrimaryKey": "",
-      "AzureSecondaryKey": ""
+      "AzureSecondaryKey": "",
+      "PublishingInterval": "00:00:15"
     }
   ]
 }
